--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Kenia&family=Roboto&display=swap');
 
-
-
 body {
     margin: 0;
     font-family: Roboto;
@@ -9,9 +7,15 @@ body {
     color: #F5EFFF;
     font-weight: bold;
     width: 100%;
+
 }
 
-
+.logoDevWeb {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 10px;
+}
 
 #logo-header {
 
@@ -30,7 +34,6 @@ body {
     font-weight: bold;
     text-shadow: 1px 2px black, 0 0 1em black, 0 0 0.2em black;
 
-
 }
 
 
@@ -42,12 +45,14 @@ header {
     font-style: italic;
     font-weight: bold;
     color: #F5EFFF;
+    padding: 10px;
+    padding-top: 0;
+
 
 
 }
 
 .burger {
-
     display: none;
 }
 
@@ -56,12 +61,31 @@ header {
     list-style-type: none;
     display: flex;
     gap: 50px;
+    padding: 0;
 
 }
 
+.bar-nav {
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+    width: 200px;
+    transition : all 2s ease-in-out
+    translate(200px);
+
+}
+
+.backgroundDim {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+
 .bar-nav-ul a {
-
-
     color: #F5EFFF;
     font-size: 18px;
     text-decoration: none;
@@ -159,7 +183,8 @@ header {
     justify-content: center;
     align-items: center;
     gap: 50px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
+
 }
 
 .title-art {
@@ -176,9 +201,6 @@ header {
 
     display: flex;
     justify-content: space-around;
-
-
-
 
 }
 
@@ -204,8 +226,6 @@ header {
 .img-zoom {
 
     transition: transform 1s;
-
-
 }
 
 .img-zoom:hover {
@@ -215,7 +235,6 @@ header {
 
 .img-zoom-css {
     transition: transform 1s;
-
 }
 
 .img-zoom-css:hover {
@@ -223,7 +242,6 @@ header {
 }
 
 .p-techno {
-
     display: flex;
     flex-direction: column;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -231,15 +249,11 @@ header {
     color: #F5EFFF;
     padding: 50px;
     width: 30%;
-
-
 }
 
 #title-p {
-
     font-style: italic;
     font-weight: bolder;
-
 }
 
 /*Css du formulaire de contact*/
@@ -306,12 +320,6 @@ footer {
 
 }
 
-.div-contact {
-    
-
-
-}
-
 @media (max-width: 900px) {
 
     /*Responsive Accueil*/
@@ -330,10 +338,12 @@ footer {
     .bar-nav {
         display: none;
     }
-    
+
 
     .burger {
         display: block;
+        cursor: pointer;
+        height: fit-content
     }
 
     .article-acc {
@@ -376,9 +386,6 @@ footer {
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
-
-
-
     }
 
     .img-techno {
@@ -386,8 +393,6 @@ footer {
         align-items: center;
         gap: 30px;
         width: 45pX;
-
-
     }
 
     .img-techno img {
